// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> error renders 1`] = `
<div
  class="field field--touched field--problem field--textarea"
>
  <label
    class="field__label field__label--touched field__label--problem field__label--textarea"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <textarea
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--problem field__input--textarea"
    id="form-0_mock"
  />
  <span
    class="message message--problem"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<TextArea /> help renders 1`] = `
<div
  class="field field--textarea"
>
  <label
    class="field__label field__label--textarea"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--textarea"
    >
      Help
    </span>
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--textarea"
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> label renders 1`] = `
<div
  class="field field--textarea"
>
  <label
    class="field__label field__label--textarea"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--textarea"
    id="form-0_mock"
  />
</div>
`;

exports[`<TextArea /> renders 1`] = `
<div
  class="field field--textarea"
>
  <label
    class="field__label field__label--textarea"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <textarea
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--textarea"
    id="form-0_mock"
  />
</div>
`;
